# resume-builder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
resume/: admin.py  forms.py  models.py  urls.py  views.py
resume/migrations/: 0001_initial.py  0002_alter_resume_end_date_and_more.py  0002_education_owner_experience_owner_projects_owner_and_more.py  0003_resume_resume_template.py
resume/templates/resume/: delete-resume.html  export-pdf.html  form-education.html  form-experience.html  form-project.html  form-resume.html  form-skill.html  home.html  resumes.html  single-resume.html
resume_builder/: asgi.py  settings.py  urls.py  wsgi.py
static/resume-templates/: resume-01.css  resume-02.css  resume-template-01.html  resume-template-02.html
static/styles/: app.css
static/uikit/: app.css
staticfiles/resume-templates/: resume-02.css  resume-template-01.html  resume-template-02.html
staticfiles/uikit/: app.css
templates/: index.html  main.html  navbar.html
users/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_profile_bio.py
users/templates/users/: account.html  login-register.html  profiles.html  single-profile.html  user-profile.html
