[tool.poetry]
name = "resume-builder"
version = "0.1.0"
description = ""
authors = ["BogdanMFometescu <mbogdan.fometescu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-environ = "^0.11.2"
django-dotenv = "^1.4.2"
psycopg2 = "^2.9.9"
whitenoise = "^6.6.0"
xhtml2pdf = "^0.2.13"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
